kuboro/classic_version/application/app-consumer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orocommerce-app-consumer
  namespace: orocommerce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orocommerce-app-consumer
  template:
    metadata:
      labels:
        app: orocommerce-app-consumer
    spec:
      securityContext:
        runAsUser: 2002
        runAsGroup: 2001
      containers:
        - name: consumer
          image: oroinc/runtime:6.1-latest
          args: ["consumer"]
          resources:
            requests:
              memory: "250Mi"
              cpu: "250m"
            limits:
              memory: "500Mi"
              cpu: "500m"
          volumeMounts:
          - name: orocommerce-app-pvc
            mountPath: /var/www/oro
          - name: orocommerce-app-cache-pvc
            mountPath: /var/www/oro/var/cache
          - name: orocommerce-app-maintenance-pvc
            mountPath: /var/www/oro/var/maintenance
          - name: orocommerce-app-public-pvc
            mountPath: /var/www/oro/public/media
          - name: orocommerce-app-private-pvc
            mountPath: /var/www/oro/var/data
      volumes:
        - name: orocommerce-app-pvc
          persistentVolumeClaim:
            claimName: orocommerce-app-pvc
            readOnly: false
        - name: orocommerce-app-cache-pvc
          persistentVolumeClaim:
            claimName: orocommerce-app-cache-pvc
            readOnly: false
        - name: orocommerce-app-maintenance-pvc
          persistentVolumeClaim:
            claimName: orocommerce-app-maintenance-pvc
            readOnly: false
        - name: orocommerce-app-public-pvc
          persistentVolumeClaim:
            claimName: orocommerce-app-public-pvc
            readOnly: false
        - name: orocommerce-app-private-pvc
          persistentVolumeClaim:
            claimName: orocommerce-app-private-pvc
            readOnly: false
