kuboro/classic_version/application/app-cron-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orocommerce-app-cron
  namespace: orocommerce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orocommerce-app-cron
  template:
    metadata:
      labels:
        app: orocommerce-app-cron
    spec:
      securityContext:
        runAsUser: 0
      containers:
        - name: cron
          image: oroinc/runtime:6.1-latest
          args: ["cron"]
          resources:
            requests:
              memory: "250Mi"
              cpu: "250m"
            limits:
              memory: "500Mi"
              cpu: "500m"
          volumeMounts:
            - name: orocommerce-app-pvc
              mountPath: /var/www/oro
            - name: orocommerce-app-cache-pvc
              mountPath: /var/www/oro/var/cache
            - name: orocommerce-app-multihost-operation-pvc
              mountPath: /var/www/oro/var/multihost
            - name: orocommerce-app-maintenance-pvc
              mountPath: /var/www/oro/var/maintenance
            - name: orocommerce-app-public-pvc
              mountPath: /var/www/oro/public/media
            - name: orocommerce-app-private-pvc
              mountPath: /var/www/oro/var/data
      volumes:
        - name: orocommerce-app-pvc
          persistentVolumeClaim:
            claimName: orocommerce-app-pvc
            readOnly: false
        - name: orocommerce-app-cache-pvc
          persistentVolumeClaim:
            claimName: orocommerce-app-cache-pvc
            readOnly: false
        - name: orocommerce-app-multihost-operation-pvc
          persistentVolumeClaim:
            claimName: orocommerce-app-multihost-operation-pvc
            readOnly: false
        - name: orocommerce-app-maintenance-pvc
          persistentVolumeClaim:
            claimName: orocommerce-app-maintenance-pvc
            readOnly: false
        - name: orocommerce-app-public-pvc
          persistentVolumeClaim:
            claimName: orocommerce-app-public-pvc
            readOnly: false
        - name: orocommerce-app-private-pvc
          persistentVolumeClaim:
            claimName: orocommerce-app-private-pvc
            readOnly: false
