kuboro/classic_version/application/consumer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orocommerce-consumer
  namespace: orocommerce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orocommerce-consumer
  template:
    metadata:
      labels:
        app: orocommerce-consumer
    spec:
      securityContext:
        runAsUser: 2002
        runAsGroup: 2001
      containers:
        - name: consumer
          image: oroinc/runtime:6.1-latest
          args: ["consumer"]
          volumeMounts:
          - name: php-fpm-app-pvc
            mountPath: /var/www/oro
          - name: php-fpm-cache-pvc
            mountPath: /var/www/oro/var/cache
          - name: php-fpm-maintenance-pvc
            mountPath: /var/www/oro/var/maintenance
          - name: php-fpm-public-pvc
            mountPath: /var/www/oro/public/media
          - name: php-fpm-private-pvc
            mountPath: /var/www/oro/var/data
      volumes:
        - name: php-fpm-app-pvc
          persistentVolumeClaim:
            claimName: php-fpm-app-pvc
            readOnly: false
        - name: php-fpm-cache-pvc
          persistentVolumeClaim:
            claimName: php-fpm-cache-pvc
            readOnly: false
        - name: php-fpm-maintenance-pvc
          persistentVolumeClaim:
            claimName: php-fpm-maintenance-pvc
            readOnly: false
        - name: php-fpm-public-pvc
          persistentVolumeClaim:
            claimName: php-fpm-public-pvc
            readOnly: false
        - name: php-fpm-private-pvc
          persistentVolumeClaim:
            claimName: php-fpm-private-pvc
            readOnly: false
