kuboro/classic_version/application/cron-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orocommerce-cron
  namespace: orocommerce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orocommerce-cron
  template:
    metadata:
      labels:
        app: orocommerce-cron
    spec:
      securityContext:
        runAsUser: 0
      containers:
        - name: cron
          image: oroinc/runtime:6.1-latest
          args: ["cron"]
          volumeMounts:
            - name: php-fpm-app-pvc
              mountPath: /var/www/oro
            - name: php-fpm-cache-pvc
              mountPath: /var/www/oro/var/cache
            - name: php-fpm-multihost-operation-pvc
              mountPath: /var/www/oro/var/multihost
            - name: php-fpm-maintenance-pvc
              mountPath: /var/www/oro/var/maintenance
            - name: php-fpm-public-pvc
              mountPath: /var/www/oro/public/media
            - name: php-fpm-private-pvc
              mountPath: /var/www/oro/var/data
      volumes:
        - name: php-fpm-app-pvc
          persistentVolumeClaim:
            claimName: php-fpm-app-pvc
            readOnly: false
        - name: php-fpm-cache-pvc
          persistentVolumeClaim:
            claimName: php-fpm-cache-pvc
            readOnly: false
        - name: php-fpm-multihost-operation-pvc
          persistentVolumeClaim:
            claimName: php-fpm-multihost-operation-pvc
            readOnly: false
        - name: php-fpm-maintenance-pvc
          persistentVolumeClaim:
            claimName: php-fpm-maintenance-pvc
            readOnly: false
        - name: php-fpm-public-pvc
          persistentVolumeClaim:
            claimName: php-fpm-public-pvc
            readOnly: false
        - name: php-fpm-private-pvc
          persistentVolumeClaim:
            claimName: php-fpm-private-pvc
            readOnly: false
