kuboro/classic_version/application/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orocommerce-nginx
  labels:
    app: orocommerce-nginx
  namespace: orocommerce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orocommerce-nginx
  template:
    metadata:
      labels:
        app: orocommerce-nginx
    spec:
      securityContext:
        runAsUser: 2002
        runAsGroup: 2001
      containers:
      - name: nginx
        image: oroinc/runtime:6.1-latest
        ports:
        - containerPort: 80
        args: ["nginx"]
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 5
          timeoutSeconds: 30
        startupProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 5
          timeoutSeconds: 30
        volumeMounts:
          - name: orocommerce-nginx-pvc
            mountPath: /opt/oro-nginx
          - name: orocommerce-app-pvc
            mountPath: /var/www/oro
          - name: orocommerce-app-cache-pvc
            mountPath: /var/www/oro/var/cache
          - name: orocommerce-app-maintenance-pvc
            mountPath: /var/www/oro/var/maintenance
          - name: orocommerce-app-public-pvc
            mountPath: /var/www/oro/public/media
          - name: orocommerce-app-private-pvc
            mountPath: /var/www/oro/var/data
      volumes:
        - name: orocommerce-nginx-pvc
          persistentVolumeClaim:
            claimName: orocommerce-nginx-pvc
        - name: orocommerce-app-pvc
          persistentVolumeClaim:
            claimName: orocommerce-app-pvc
            readOnly: false
        - name: orocommerce-app-cache-pvc
          persistentVolumeClaim:
            claimName: orocommerce-app-cache-pvc
            readOnly: true
        - name: orocommerce-app-maintenance-pvc
          persistentVolumeClaim:
            claimName: orocommerce-app-maintenance-pvc
            readOnly: false
        - name: orocommerce-app-public-pvc
          persistentVolumeClaim:
            claimName: orocommerce-app-public-pvc
            readOnly: true
        - name: orocommerce-app-private-pvc
          persistentVolumeClaim:
            claimName: orocommerce-app-private-pvc
            readOnly: true
