kuboro/classic_version/application/php-fpm-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orocommerce-app-php-fpm
  namespace: orocommerce
spec:
  replicas: 3
  selector:
    matchLabels:
      app: orocommerce-app-php-fpm
  template:
    metadata:
      labels:
        app: orocommerce-app-php-fpm
    spec:
      securityContext:
        runAsUser: 2002
        runAsGroup: 2001
      containers:
        - name: orocommerce-app-php-fpm
          image: oroinc/runtime:6.1-latest
          args: ["php-fpm"]
          ports:
            - containerPort: 9000
          livenessProbe:
            exec:
                command:
                    - /bin/sh
                    - -c
                    - php-fpm-healthcheck
            periodSeconds: 5
            initialDelaySeconds: 15
            timeoutSeconds: 30
          volumeMounts:
            - name: php-fpm-app-pvc
              mountPath: /var/www/oro
            - name: php-fpm-cache-pvc
              mountPath: /var/www/oro/var/cache
            - name: php-fpm-multihost-operation-pvc
              mountPath: /var/www/oro/var/multihost
            - name: php-fpm-maintenance-pvc
              mountPath: /var/www/oro/var/maintenance
            - name: php-fpm-public-pvc
              mountPath: /var/www/oro/public/media
            - name: php-fpm-private-pvc
              mountPath: /var/www/oro/var/data
            - name: tmp
              mountPath: /tmp
      volumes:
        - name: php-fpm-app-pvc
          persistentVolumeClaim:
            claimName: php-fpm-app-pvc
            readOnly: false
        - name: php-fpm-cache-pvc
          persistentVolumeClaim:
            claimName: php-fpm-cache-pvc
            readOnly: false
        - name: php-fpm-multihost-operation-pvc
          persistentVolumeClaim:
            claimName: php-fpm-multihost-operation-pvc
            readOnly: false
        - name: php-fpm-maintenance-pvc
          persistentVolumeClaim:
            claimName: php-fpm-maintenance-pvc
            readOnly: false
        - name: php-fpm-public-pvc
          persistentVolumeClaim:
            claimName: php-fpm-public-pvc
            readOnly: false
        - name: php-fpm-private-pvc
          persistentVolumeClaim:
            claimName: php-fpm-private-pvc
            readOnly: false
        - name: tmp
          emptyDir: {}
