kuboro/classic_version/application/postgre-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: orocommerce-postgre
  labels:
    app: orocommerce-postgre
  namespace: orocommerce
spec:
  selector:
    matchLabels:
      app: orocommerce-postgre
  serviceName: orocommerce-postgre
  replicas: 1
  template:
    metadata:
      labels:
        app: orocommerce-postgre
    spec:
      containers:
        - name: postgre
          image: docker.io/oroinc/pgsql:17.2-alpine
          ports:
          - containerPort: 5432
            name: postgre
          volumeMounts:
            - name: orocommerce-postgre-pvc
              mountPath: /var/lib/postgresql/data
          livenessProbe:
            exec:
              command:
              - /bin/sh
              - -c
              - exec pg_isready -U orodbuser -d orodb
            failureThreshold: 6
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          readinessProbe:
            exec:
              command:
              - /bin/sh
              - -c
              - -e
              - |
                exec pg_isready -U orodbuser -d orodb
            failureThreshold: 6
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
  volumeClaimTemplates:
    - metadata:
        name: orocommerce-postgre-pvc
      spec:
        accessModes:
          - ReadWriteOncePod
        volumeMode: Filesystem
        resources:
          requests:
            storage: 5Gi
        storageClassName: local-storage
        selector:
          matchLabels:
            name: orocommerce-postgre-pv
