kuboro/classic_version/application/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orocommerce-app
  namespace: orocommerce
spec:
  selector:
    app: orocommerce-app
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
  type: ClusterIP
