kuboro/classic_version/application/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orocommerce-nginx
  labels:
    app: orocommerce-nginx
  namespace: orocommerce
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    name: orocommerce-nginx
  selector:
    app: orocommerce-nginx
