kuboro/classic_version/application/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: orocommerce-ingress
  namespace: orocommerce
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - oro.demo
      secretName: orocommerce-tls
  rules:
  - host: oro.demo
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: orocommerce-nginx
            port:
              number: 80
